--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -9,7 +9,7 @@ on:
   pull_request:
     branches: [ "main" ]
   schedule:
-      - cron: "0 03 * * 7"
+      - cron: "0 0 3 * * 7"
 
 jobs:
   build:
